trunk/NewArchive/f6cc34627be4e9b04f905d1cb58d02a0-108bed60a2b73b252f8c8ee41b83821b/output
+ g++ -std=c++11 -O3 -Wall -Wextra -pedantic-errors -pthread main.cpp
main.cpp:8:1: error: expected ‘;’ after struct definition
 }
 ^
